# pongCpp

./: CMakeLists.txt  README.md  main2.cpp
include/: ai.hpp  ball.hpp  constants.hpp  player.hpp  pong.hpp  score.hpp  sound_manager.hpp
src/: main.cpp
src/ai/: ai.cpp
src/ball/: ball.cpp
src/player/: player.cpp
src/score/: score.cpp
src/sound_manager/: sound_manager.cpp
src/window/: window.cpp
